# MosesQuant

./: CLAUDE.md  Cargo.toml  GITHUB_PUSH_GUIDE.md  PROJECT_STRUCTURE.md  PYTHON_GUIDE.md  PYTHON_README.md  README.md  push_to_github.sh  requirements.txt  setup.py  任务清单.md  开发工作流程.md  源项目PROJECT_STRUCTURE.md
.claude/: settings.local.json
config/: default.yaml
docs/architecture/: 01-overall-architecture.md  03-core-foundation-layer.md  README.md
examples/: basic_trading.rs
python_examples/: strategy_example.py
src/: config.rs  data.rs  error.rs  events.rs  indicators.rs  lib.rs  plugins.rs  python_ffi.rs  runner.rs  strategy.rs  types.rs
src/core/: event_bus.rs  memory.rs  mod.rs  scheduling.rs  simple_event_bus.rs  simple_memory.rs
src/data/: binance.rs  csv_source.rs
src/examples/: data_integration.rs  mod.rs
src/plugins/: cicd_integration.rs  communication.rs  core.rs  dependency_injection.rs  dev_toolkit.rs  dynamic_loader.rs  lifecycle.rs  marketplace.rs  metadata.rs  mod.rs  quality_assurance.rs  registry.rs  version_management.rs
src/services/: config_manager.rs  data_manager.rs  mod.rs  monitoring_engine.rs  order_manager.rs  risk_manager.rs  strategy_engine.rs
src/types/: events.rs  market_data.rs  mod.rs  trading.rs
参考/: 重构参考.md
架构/: 01-总体架构设计.md  02-核心数据结构.md  03-五阶段策略流水线.md  04-事件驱动系统.md  05-回测引擎架构.md  05-标准化接口与计算引擎.md  06-Python FFI绑定架构.md  06-数据管理与连接器.md  AI策略工厂智能系统设计.md  Gateway抽象层深度设计.md  可插拔设计适合性重新评估.md  插件市场和生态系统设计.md  插件热更新与版本管理系统.md  插件生命周期管理系统设计.md  新的架构思考.md  新的架构思考进阶.md  架构优化与完善方案.md  框架公共组件与可插拔组件设计.md  统一标签池深度设计.md  跨插件通信与依赖管理机制.md  鲁棒性框架监控体系设计.md
