[package]
name = "moses_quant"
version = "2.0.0"
edition = "2021"
authors = ["MosesQuant Team"]
description = "High-performance Rust quantitative trading framework with pluggable architecture"

[lib]
name = "moses_quant"
crate-type = ["cdylib", "rlib"]  # 支持动态库和静态库

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# 序列化和数据处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# 数值计算
rust_decimal = { version = "1.32", features = ["serde"] }  # 高精度金融计算
ndarray = "0.15"
num-traits = "0.2"
statrs = "0.16"
rand = "0.8"
semver = "1.0"  # 语义化版本

# 并行计算
rayon = "1.7"
crossbeam = "0.8"

# 网络和通信
tonic = "0.8"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"  # WebSocket支持
futures-util = "0.3"        # WebSocket流处理

# 数据存储
# lmdb = "0.8"  # 暂时禁用
# rocksdb = "0.20"  # 暂时禁用，可能引用了zstd
memmap2 = "0.9"

# 压缩库
lz4_flex = "0.11"
# zstd = "0.13"  # 暂时禁用，需要libclang
snap = "1.1"
flate2 = "1.0"

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# Python FFI (可选)
pyo3 = { version = "0.18", optional = true, features = ["extension-module"] }
pythonize = { version = "0.18", optional = true }

# 性能优化
dashmap = "5.4"  # 高性能并发HashMap
parking_lot = "0.12"  # 高性能锁
once_cell = "1.17"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.15"  # CPU核心数检测
jsonschema = "0.17"  # JSON Schema验证
toml = "0.8"  # TOML序列化支持

[features]
default = ["python"]
python = ["dep:pyo3", "dep:pythonize"]

[dev-dependencies]
criterion = "0.4"  # 性能测试
mockall = "0.11"   # 模拟测试

# [[bench]]
# name = "trading_engine"
# harness = false
